* Only relate milestone with sale lines of type line

Version 3.4.0 - 2014-12-18
* Initial release