@@ -1,3 +1,4 @@
+* Fix invoice duplication
 * Only relate milestone with sale lines of type line
 
 Version 3.4.0 - 2014-12-18
